bundled_metadata/force-app/main/default/objects/Assortment_Assignment__c/Assortment_Assignment__c.object-meta.xml
<CustomObject>
    <label>Assortment Assignment</label>
    <nameField>
        <displayFormat>AA-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assortment Assignments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>