bundled_metadata/force-app/main/default/objects/Assortment_Assignment__c/fields/Assortment__c.field-meta.xml
<CustomField>
    <fullName>Assortment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssortmentId</label>
    <referenceTo>Assortment</referenceTo>
    <relationshipLabel>Assortment Assignments</relationshipLabel>
    <relationshipName>Assortment_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>