bundled_metadata/force-app/main/default/objects/Assortment_Assignment__c/fields/Assortment_Name__c.field-meta.xml
<CustomField>
    <fullName>Assortment_Name__c</fullName>
    <label>Assortment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>