bundled_metadata/force-app/main/default/objects/Assortment_Assignment__c/fields/AssortmentExtID__c.field-meta.xml
<CustomField>
    <fullName>AssortmentExtID__c</fullName>
    <externalId>true</externalId>
    <label>Assortment Ext Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>