bundled_metadata/force-app/main/default/objects/Assortment_Assignment__c/fields/Cust_L1__c.field-meta.xml
<CustomField>
    <fullName>Cust_L1__c</fullName>
    <label>L1 Customer Hierarchy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWAY FROM HOME</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTOR</fullName>
            </value>
            <value>
                <fullName>E-COMMERCE</fullName>
            </value>
            <value>
                <fullName>LARGE FORMAT</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>SMALL FORMAT</fullName>
            </value>
            <value>
                <fullName>TRADITIONAL TRADE</fullName>
            </value>
            <value>
                <fullName>WHOLESALE</fullName>
            </value>
            <value>
                <fullName>TRADITIONAL SALE</fullName>
            </value>
            <value>
                <fullName>ORGANIZED TRADE</fullName>
            </value>
            <value>
                <fullName>PRE-SELLER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>