bundled_metadata/force-app/main/default/objects/Assortment_Assignment__c/fields/Cust_L3_bevs__c.field-meta.xml
<CustomField>
    <fullName>Cust_L3_bevs__c</fullName>
    <label>L3 Beverages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricegroup_Cluster_Value_Segmentation</valueSetName>
    </valueSet>
</CustomField>