bundled_metadata/force-app/main/default/objects/Assortment_Assignment__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Markets</valueSetName>
    </valueSet>
</CustomField>